// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/category-selector/CategorySelector should render component correctly 1`] = `
<div
  className="category-selector"
>
  <div
    className="category-links"
  >
    <span
      className="category-pill selected"
      data-category="all"
      data-resin-target="selectcategory"
      data-resin-template_category="All"
      data-testid="template-category-all"
      key="all"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    >
      All
    </span>
    <span
      className="category-pill"
      data-category="legal"
      data-resin-target="selectcategory"
      data-resin-template_category="Legal"
      data-testid="template-category-legal"
      key="legal"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    >
      Legal
    </span>
    <span
      className="category-pill"
      data-category="marketing"
      data-resin-target="selectcategory"
      data-resin-template_category="Marketing"
      data-testid="template-category-marketing"
      key="marketing"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    >
      Marketing
    </span>
    <span
      className="category-pill"
      data-category="hr"
      data-resin-target="selectcategory"
      data-resin-template_category="HR"
      data-testid="template-category-hr"
      key="hr"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    >
      HR
    </span>
    <span
      className="category-pill"
      data-category="bizops"
      data-resin-target="selectcategory"
      data-resin-template_category="Business Operations"
      data-testid="template-category-bizops"
      key="bizops"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    >
      Business Operations
    </span>
    <span
      className="category-pill"
      data-category="sales"
      data-resin-target="selectcategory"
      data-resin-template_category="Sales"
      data-testid="template-category-sales"
      key="sales"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    >
      Sales
    </span>
    <span
      className="category-pill"
      data-category="finance"
      data-resin-target="selectcategory"
      data-resin-template_category="Finance"
      data-testid="template-category-finance"
      key="finance"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    >
      Finance
    </span>
  </div>
  <div
    className="category-more hide"
  >
    <DropdownMenu
      className="dropdownWrapper"
      constrainToScrollParent={false}
      constrainToWindow={false}
      isRightAligned={true}
    >
      <PlainButton
        className="category-more-label"
      >
        <MenuToggle>
          <FormattedMessage
            defaultMessage="More"
            id="categoryselector.templates.category.label.more"
          />
        </MenuToggle>
      </PlainButton>
      <Menu
        className=""
        isHidden={false}
        isSubmenu={false}
      />
    </DropdownMenu>
  </div>
</div>
`;

exports[`components/category-selector/CategorySelector should render component correctly with more dropdown 1`] = `
<div
  className="category-selector"
>
  <div
    className="category-links"
  >
    <span
      className="category-pill selected"
      data-category="all"
      data-resin-target="selectcategory"
      data-resin-template_category="All"
      data-testid="template-category-all"
      key="all"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    >
      All
    </span>
    <span
      className="category-pill"
      data-category="legal"
      data-resin-target="selectcategory"
      data-resin-template_category="Legal"
      data-testid="template-category-legal"
      key="legal"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    >
      Legal
    </span>
    <span
      className="category-pill"
      data-category="marketing"
      data-resin-target="selectcategory"
      data-resin-template_category="Marketing"
      data-testid="template-category-marketing"
      key="marketing"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    >
      Marketing
    </span>
    <span
      className="category-pill"
      data-category="hr"
      data-resin-target="selectcategory"
      data-resin-template_category="HR"
      data-testid="template-category-hr"
      key="hr"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
    >
      HR
    </span>
  </div>
  <div
    className="category-more"
  >
    <DropdownMenu
      className="dropdownWrapper"
      constrainToScrollParent={false}
      constrainToWindow={false}
      isRightAligned={true}
    >
      <PlainButton
        className="category-more-label"
      >
        <MenuToggle>
          <FormattedMessage
            defaultMessage="More"
            id="categoryselector.templates.category.label.more"
          />
        </MenuToggle>
      </PlainButton>
      <Menu
        className=""
        isHidden={false}
        isSubmenu={false}
      >
        <SelectMenuItem
          data-testid="template-category-more-bizops"
          isSelected={false}
          key="bizops"
          onClick={[Function]}
        >
          Business Operations
        </SelectMenuItem>
        <SelectMenuItem
          data-testid="template-category-more-sales"
          isSelected={false}
          key="sales"
          onClick={[Function]}
        >
          Sales
        </SelectMenuItem>
        <SelectMenuItem
          data-testid="template-category-more-finance"
          isSelected={false}
          key="finance"
          onClick={[Function]}
        >
          Finance
        </SelectMenuItem>
      </Menu>
    </DropdownMenu>
  </div>
</div>
`;
